--- a/src/components/LandingPage/Banner/Banner.css
+++ b/src/components/LandingPage/Banner/Banner.css
@@ -4,12 +4,11 @@
   justify-content: center;
   align-items: center;
   width: 100%;
-  height: 640px; /* Adjust height as needed */
-  padding: 80px 0 0 0;
+  height: 650px; 
 }
 
 .banner {
-  width: 1280px; /* Adjust width as needed */
+  width: 1380px;
   height: 100%;
   border-radius: 8px;
   position: relative;
@@ -21,7 +20,9 @@
 
 .banner-image {
   width: 100%;
-  height: 100%;
+  height: 95%;
+  margin-top: 15px;
+  border-radius: 20px;
   object-fit: cover;
   position: absolute;
   top: 0;
@@ -50,10 +51,9 @@
 .banner-text-button {
   padding: 10px 20px;
   border-radius: 50px;
-  background-color: orange;
+  background-color: #ddd;
   color: black;
   border: none;
   cursor: pointer;
-  font-size: 16px;
-  font-weight: bold;
+  font-size: 26px;
 }
