--- a/src/components/LandingPage/Header/Header.css
+++ b/src/components/LandingPage/Header/Header.css
@@ -3,13 +3,14 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding: 20px 50px;
+  padding: 20px 0px;
   width: 100%;
 }
 
 .header_logo {
-  height: 40px;
+  height: 70px;
   object-fit: contain;
+  margin-left: 80px;
 }
 
 .header_center {
@@ -60,4 +61,8 @@
   padding: 8px 16px;
   gap: 8px;
   cursor: pointer;
+  background-color: #ddd;
+}
+.menu_icon{
+  color: black;
 }
