--- a/src/components/Navigation/NavBar.css
+++ b/src/components/Navigation/NavBar.css
@@ -1,8 +1,8 @@
 .search-bar-container {
     display: flex;
     justify-content: center;
-    margin-top: 20px;
     width: 100%;
+    background-color: black;
   }
   
   .search-bar {
