--- a/src/components/LandingPage/Header/Header.css
+++ b/src/components/LandingPage/Header/Header.css
@@ -63,6 +63,37 @@
   cursor: pointer;
   background-color: #ddd;
 }
-.menu_icon{
+
+.menu_icon {
   color: black;
+}
+
+.dropdown_menu {
+  position: absolute;
+  top: 70px;
+  right: 10px;
+  background-color: white;
+  box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.1);
+  border-radius: 8px;
+  overflow: hidden;
+  z-index: 1;
+}
+
+.dropdown_menu p {
+  padding: 12px 16px;
+  margin: 0;
+  cursor: pointer;
+}
+
+.dropdown_menu p:hover {
+  background-color: #f1f1f1;
+}
+
+.dropdown_menu a {
+  text-decoration: none;
+  color: black;
+}
+
+.dropdown_menu a:hover {
+  background-color: #f1f1f1;
 }
