--- a/src/components/LandingPage/Inspiration/Inspiration.css
+++ b/src/components/LandingPage/Inspiration/Inspiration.css
@@ -97,7 +97,7 @@
   
   .experience-info {
     position: absolute;
-    bottom: 390px; /* Adjust this value to move the content higher or lower */
+    bottom: 390px; 
     left: 54px;
     color: white;
     font-size: 55px;
@@ -173,11 +173,9 @@
   
   .hosting-content {
     position: absolute;
-    /* bottom: 10px; */
     border-radius: 8px;
     width: 1,280px;
     height: 640px;
-    /* left: 20%; */
     color: white;
     font-size: 50px;
     justify-content: space-between;
@@ -280,32 +278,3 @@
     text-decoration: underline;
   }
   
-  /* .footer-bottom {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 20px 0;
-    border-top: 1px solid #eaeaea;
-    margin-top: 40px;
-  } */
-  
-  /* .footer-bottom p {
-    margin: 0;
-  }
-   */
-  /* .footer-icons {
-    display: flex;
-    gap: 16px;
-  }
-  
-  .footer-icons a {
-    color: #333;
-    text-decoration: none;
-  }
-  
-  .footer-icons img {
-    width: 20px;
-    height: 20px;
-  }
-
-   */
