--- a/src/components/Login/Login.css
+++ b/src/components/Login/Login.css
@@ -1,64 +1,78 @@
 .login-container {
-    /* width: 100%; */
-    max-width: 500px;
-    height: 100%;
-    max-height: 400px;
-    margin: 50px auto;
-    padding: 20px;
-    border: 1px solid #ddd;
-    border-radius: 10px;
-    background-color: white;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-  }
-  
+  max-width: 500px;
+  height: 100%;
+  max-height: 400px;
+  margin: 50px auto;
+  padding: 20px;
+  border: 1px solid #ddd;
+  border-radius: 10px;
+  background-color: white;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
 .login-container h2 {
-    text-align: center;
-    margin-bottom: 20px;
-  }
-  
+  text-align: center;
+  margin-bottom: 20px;
+}
+
 .input-container {
-    margin-bottom: 15px;
-  }
-  
+  margin-bottom: 15px;
+}
+
 .input-container label {
-    display: block;
-    margin-bottom: 5px;
-    color: #333;
-  }
-  
+  display: block;
+  margin-bottom: 5px;
+  color: #333;
+}
+
 .input-container input {
-    width: 97%;
-    padding: 10px;
-    border: 1px solid #ddd;
-    border-radius: 5px;
-  }
-  
+  width: 100%;
+  padding: 10px;
+  border: 1px solid #ddd;
+  border-radius: 5px;
+}
+
 .forgot-password {
-    text-align: right;
-    margin-bottom: 20px;
-  }
-  
+  text-align: right;
+  margin-bottom: 20px;
+}
+
 .forgot-password a {
-    color: #007bff;
-    text-decoration: none;
-  }
-  
+  color: #007bff;
+  text-decoration: none;
+}
+
 .forgot-password a:hover {
-    text-decoration: underline;
-  }
-  
+  text-decoration: underline;
+}
+
 .login-button {
-    width: 100%;
-    padding: 10px;
-    border: none;
-    border-radius: 5px;
-    background-color: #007bff;
-    color: white;
-    font-size: 16px;
-    cursor: pointer;
-  }
-  
+  width: 100%;
+  padding: 10px;
+  border: none;
+  border-radius: 5px;
+  background-color: #007bff;
+  color: white;
+  font-size: 16px;
+  cursor: pointer;
+}
+
 .login-button:hover {
-    background-color: #0056b3;
-  }
-  
+  background-color: #0056b3;
+}
+
+.signup-link {
+  text-align: center;
+  margin-top: 10px;
+  color: black;
+}
+
+.signup-link a {
+  color: #007bff;
+  font-size: 12px;
+  text-decoration: none;
+}
+
+.signup-link a:hover {
+  text-decoration: underline;
+}
