--- a/src/components/Navigation/NavBar.css
+++ b/src/components/Navigation/NavBar.css
@@ -1,65 +1,66 @@
 .search-bar-container {
-    display: flex;
-    justify-content: center;
-    width: 100%;
-    background-color: black;
-  }
-  
-  .search-bar {
-    display: flex;
-    background-color: white;
-    border: 1px solid #ddd;
-    border-radius: 50px;
-    padding: 10px;
-    align-items: center;
-    max-width: 800px;
-    width: 100%;
-    justify-content: space-around;
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-  }
-  
-  .search-section {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    padding: 0 15px;
-  }
-  
-  .search-section label {
-    font-size: 12px;
-    font-weight: bold;
-    color: black;
-    margin-bottom: 5px;
-  }
-  
-  .search-section input {
-    border: none;
-    outline: none;
-    font-size: 14px;
-    padding: 5px 0;
-    width: 120px; /* Adjust width as needed */
-  }
-  
-  .search-section input::placeholder {
-    color: #b0b0b0;
-  }
-  
-  .search-button {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background-color: #ff385c;
-    color: white;
-    border: none;
-    border-radius: 50%;
-    padding: 10px;
-    cursor: pointer;
-    font-size: 14px;
-    width: 40px; /* Ensure the button is a square */
-    height: 40px;
-  }
-  
-  .search-button:hover {
-    background-color: #e60023;
-  }
-  
+  display: flex;
+  justify-content: center;
+  width: 100%;
+  background-color: black;
+}
+
+.search-bar {
+  display: flex;
+  background-color: white;
+  border: 1px solid #ddd;
+  border-radius: 50px;
+  padding: 10px;
+  align-items: center;
+  max-width: 800px;
+  width: 100%;
+  justify-content: space-around;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+}
+
+.search-section {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  padding: 0 15px;
+}
+
+.search-section label {
+  font-size: 12px;
+  font-weight: bold;
+  color: black;
+  margin-bottom: 5px;
+}
+
+.search-section input,
+.search-section select {
+  border: none;
+  outline: none;
+  font-size: 14px;
+  padding: 5px 0;
+  width: 120px; /* Adjust width as needed */
+}
+
+.search-section input::placeholder,
+.search-section select {
+  color: #b0b0b0;
+}
+
+.search-button {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: #ff385c;
+  color: white;
+  border: none;
+  border-radius: 50%;
+  padding: 10px;
+  cursor: pointer;
+  font-size: 14px;
+  width: 40px; /* Ensure the button is a square */
+  height: 40px;
+}
+
+.search-button:hover {
+  background-color: #e60023;
+}
